[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/GUI/Builder/TileWheel/selection_pie.png" type="Texture" id=1]
[ext_resource path="res://assets/GUI/Builder/TileWheel/info_middle.png" type="Texture" id=2]
[ext_resource path="res://assets/GUI/Builder/TileWheel/bg.png" type="Texture" id=3]
[ext_resource path="res://fonts/neuropol x rg.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/Levels/BuilderLevel/BuilderView/TileWheel/TileWheel.gd" type="Script" id=5]
[ext_resource path="res://src/Levels/BuilderLevel/BuilderView/TileWheel/SelectionArea.gd" type="Script" id=6]

[sub_resource type="CircleShape2D" id=1]
radius = 385.367

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 4 )

[node name="TileWheel" type="Node2D"]
script = ExtResource( 5 )

[node name="Area2D" type="Area2D" parent="."]
z_index = 11
z_as_relative = false
script = ExtResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="Tween" type="Tween" parent="."]

[node name="Info" type="Sprite" parent="."]
z_index = 4
texture = ExtResource( 2 )

[node name="Node2D" type="Node2D" parent="Info"]
z_index = 4

[node name="InfoLabel" type="Label" parent="Info/Node2D"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -187.0
margin_top = -123.0
margin_right = 189.0
margin_bottom = 114.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Bouncy Boy"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Sprite" parent="."]
texture = ExtResource( 3 )

[node name="Selection" type="Sprite" parent="."]
self_modulate = Color( 0.414063, 0.414063, 0.414063, 0.588235 )
rotation = -0.785398
z_index = 3
texture = ExtResource( 1 )

[node name="SectionNameLabel" type="Label" parent="."]
margin_left = -336.007
margin_top = -496.625
margin_right = 336.993
margin_bottom = -418.625
rect_min_size = Vector2( 673, 78 )
custom_fonts/font = SubResource( 3 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LatchPoints" type="Node2D" parent="."]

[node name="0" type="Sprite" parent="LatchPoints"]
position = Vector2( 272.86, 109.614 )
z_index = 2

[node name="1" type="Sprite" parent="LatchPoints"]
position = Vector2( 103.33, 266.956 )
z_index = 2

[node name="2" type="Sprite" parent="LatchPoints"]
position = Vector2( -103.873, 260.308 )
z_index = 2

[node name="3" type="Sprite" parent="LatchPoints"]
position = Vector2( -271.186, 118.479 )
z_index = 2

[node name="4" type="Sprite" parent="LatchPoints"]
position = Vector2( -277.835, -106.453 )
z_index = 2

[node name="5" type="Sprite" parent="LatchPoints"]
position = Vector2( -111.629, -261.578 )
z_index = 2

[node name="6" type="Sprite" parent="LatchPoints"]
position = Vector2( 116.627, -261.578 )
z_index = 2

[node name="7" type="Sprite" parent="LatchPoints"]
position = Vector2( 265.104, -104.237 )
z_index = 2
